// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`atx.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
# h1

## h2

=====================================output=====================================
# h1

## h2

================================================================================
`;

exports[`long-heading.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
# this is a long long long long long long long long long long long long long long heading.

=====================================output=====================================
# this is a long long long long long long long long long long long long long long heading.

================================================================================
`;

exports[`mixed.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
## LaraCart - Laravel Shopping Cart Package (<a href="http://laracart.lukepolo.com/">http://laracart.lukepolo.com</a>)

=====================================output=====================================
## LaraCart - Laravel Shopping Cart Package (<a href="http://laracart.lukepolo.com/">http://laracart.lukepolo.com</a>)

================================================================================
`;

exports[`setext.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
h1
===

h2
---

=====================================output=====================================
# h1

## h2

================================================================================
`;

exports[`unbreakable.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
### \`reporters\` [array<moduleName | [moduleName, options]>]

=====================================output=====================================
### \`reporters\` [array<moduleName | [moduleName, options]>]

================================================================================
`;
